# keykeeper

./: .gitignore  .mypy.ini  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt
keykeeper/: keykeeper.py  keykeeper_protocol.py  server.py
keykeeper/keykeeper_pack/: backup.py  secrets.py  server.py  users.py
keykeeper/server_pack/: __init__.py  backup.py  db.py  secrets.py  users.py
src/: Dockerfile  keykeeper.py  pytest.ini  requirements.txt  server.py
src/keykeeper_pack/: common.py  secrets.py  server.py  users.py
src/server_pack/: __init__.py  users.py
src/test/: conftest.py  test_db.py  test_ipc_secret.py  test_ipc_server.py  test_ipc_user.py  test_keykeeper_protocol.py  test_secret.py  test_server.py  test_user.py  test_user_secret.py  test_web.py
test/: conftest.py  dump.json  test_ipc_secret.py  test_ipc_server.py  test_ipc_user.py  test_keykeeper_protocol.py  test_performance.py  test_secret_edit.py  test_secret_lock.py  test_secret_ls.py  test_secret_remove.py  test_secret_unlock.py  test_secret_value.py  test_server.py  test_user_edit.py  test_user_key.py  test_user_lock.py  test_user_ls.py  test_user_remove.py  test_user_secret.py  test_user_unlock.py  test_web.py
test/test_a_common/: test_2_db.py  test_3_server.py  test_4_ipc_server.py
test/test_b_db/: test_2_dump.py  test_3_ipc_backup.py
test/test_c_secret/: test_ipc_secret.py  test_secret_edit.py  test_secret_lock.py  test_secret_ls.py  test_secret_remove.py  test_secret_unlock.py  test_secret_value.py
test/test_e_user/: test_ipc_user.py  (+6 more)
(+3 files in other folders)
